--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -570,7 +570,7 @@ to compute, without even requiring arithmetic.
 % left lower right upper
 %\includegraphics[trim={2mm, 10mm, 2mm, 0mm}, width=\textwidth]{figs/compare-compas-weapon.pdf}
 \includegraphics[trim={2mm, 0mm, 101mm, 0mm}, clip,
-width=0.59\textwidth]{figs/compare-compas-weapon.pdf}
+width=0.55\textwidth]{figs/compare-compas-weapon.pdf}
 \vspace{-7mm}
 \end{center}
 \caption{Two-year recidivism prediction for the ProPublica COMPAS data set.
@@ -625,7 +625,7 @@ those found via other algorithms.
 %\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
 % left lower right upper
 \includegraphics[trim={2mm, 10mm, 2mm, 0mm},
-width=0.95\textwidth]{figs/compare-weapon.pdf}
+width=0.9\textwidth]{figs/compare-weapon.pdf}
 \end{center}
 \caption{TPR (left) and FPR (right) for the test set,
 for CORELS and a panel of seven other algorithms,
@@ -648,7 +648,7 @@ Note that we were unable to execute RIPPER for the NYCLU problem.
 %\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
 % left lower right upper
 \includegraphics[trim={12mm, 5mm, 24mm, 5mm},
-width=0.75\textwidth]{figs/compas-sparsity-training.pdf}
+width=0.7\textwidth]{figs/compas-sparsity-training.pdf}
 %
 \end{center}
 \caption{Training and test accuracy as a function of model size, across different methods,
@@ -697,9 +697,9 @@ NYPD data set and is similar to Figure~\ref{fig:sparsity-weapon}.
 %\includegraphics[width=0.7\textwidth]{figs/sketch-comparison.png}
 % left lower right upper
 \includegraphics[trim={17mm, 0mm, 27mm, 0mm},
-width=0.75\textwidth]{figs/weapon-sparsity-tpr.pdf}
+width=0.7\textwidth]{figs/weapon-sparsity-tpr.pdf}
 \includegraphics[trim={17mm, 10mm, 27mm, 4mm},
-width=0.75\textwidth]{figs/weapon-sparsity-fpr.pdf}
+width=0.7\textwidth]{figs/weapon-sparsity-fpr.pdf}
 \end{center}
 \caption{TPR (top) and FPR (bottom)
 for the test set, as a function of model size, across different methods,
@@ -718,20 +718,17 @@ C4.5 finds large models for all tested parameters.
 \label{fig:sparsity-weapon}
 \end{figure}
 
-In prior work, we used CORELS to identify a short rule list depending on only
-three features, age, prior convictions, and sex \citep{AngelinoLaAlSeRu17-kdd},
-that achieves test accuracy comparable to COMPAS.
+In Figure~\ref{fig:propublica}, we used CORELS to identify short rule lists, depending on only three features, age, prior convictions, and sex \citep[also see][]{AngelinoLaAlSeRu17-kdd}, that achieve test accuracy comparable to COMPAS.
 %
-\citet{Dressel2018} reported a similar result for another simple classifier,
-a logistic regression model with two features (age and prior convictions).
+If we restrict CORELS to search the space of rule lists formed from only age and prior convictions (${\Reg=0.005}$), the optimal rule lists it finds achieves test accuracy that is again comparable to COMPAS.
 %
-If we restrict CORELS to search the space of rule lists formed from these same
-two features (${\Reg=0.005}$), it identifies the same rule list across 10-fold
-cross-validation experiments (Figure~\ref{fig:compas-two-features}).
+CORELS identifies the same rule list across 10-fold cross-validation experiments (Figure~\ref{fig:compas-two-features}).
 %
-This optimal rule list achieves test accuracy that is again comparable to COMPAS.
+In work subsequent to ours~\citep{AngelinoLaAlSeRu17-kdd}, \citet{Dressel2018} confirmed this result, in the sense that they used logistic regression to construct a linear classifier with age and prior convictions, and also achieved similar accuracy to COMPAS.
 %
-Such a rule list is simpler to use than a linear model, which requires multiplication and addition operations to evaluate.
+However, computing a logistic regression model requires multiplication and addition, and their model cannot easily be computed, in the sense that it requires a calculator (and thus is potentially error-prone).
+%
+Our rule lists require no such computation.
 
 \begin{figure}[t!]
 %\vspace{2mm}
