--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -727,8 +727,8 @@ If we restrict CORELS to search the space of rule lists formed from only age
 and prior convictions (${\Reg=0.005}$), the optimal rule lists it finds achieve
 test accuracy that is again comparable to COMPAS.
 %
-CORELS identifies the same rule list across 10-fold cross-validation experiments
-(Figure~\ref{fig:compas-two-features}).
+CORELS identifies the same rule list across all 10 folds of 10-fold
+cross-validation experiments (Figure~\ref{fig:compas-two-features}).
 %
 In work subsequent to ours~\citep{AngelinoLaAlSeRu17-kdd}, \citet{Dressel2018}
 confirmed this result, in the sense that they used logistic regression to
