Add link to website

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -84,7 +84,8 @@ SAIL, and the UC Berkeley Database Group for their support and feedback.
 %
 We thank H.~Yang and B.~Letham for sharing advice and code for processing data
 and mining rules, B.~Coker for his critical advice on using the ProPublica COMPAS data set,
-as well as V.~Kaxiras and A.~Saligrama for their recent contributions to our implementation.
+as well as V.~Kaxiras and A.~Saligrama for their recent contributions to our implementation
+and for creating the CORELS website.
 }
 
 \vskip 0.2in
