--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -22,6 +22,14 @@ year = {2017},
 month = apr
 }
 
+@misc{corels-website,
+title = {Building Predictive Models with Rule Lists},
+note = {\url{https://corels.eecs.harvard.edu}},
+__author = {Vassilios Kaxiras and Aditya Saligrama},
+author = {V. Kaxiras and A. Saligrama},
+year = 2018
+}
+
 @unpublished{ErtekinRu17,
 __author={Seyda Ertekin and Cynthia Rudin},
 author={S. Ertekin and C. Rudin},
