--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -213,13 +213,18 @@ long version of this report that includes proofs to all
 bounds in~\S\ref{sec:framework}, additional bounds and empirical results,
 and further implementation and data processing details~\citep{AngelinoLaAlSeRu17}. \\
 
-Our code is at
+Our code is at \textbf{\url{https://github.com/nlarusstone/corels}}.
 \end{kdd}
 \begin{arxiv}
 preliminary version of this report~\citep{AngelinoLaAlSeRu17-kdd}, and a report
 highlighting systems optimizations of our implementation~\citep{Larus-Stone18-sysml}; the latter includes
 additional empirical measurements not presented here. \\
 
-Our implementation of CORELS is at
+Our code is at \textbf{\url{https://github.com/nlarusstone/corels}},
+where we provide the C++ implementation we used in our experiments~(\S\ref{sec:experiments}).
+% Python and R wrappers?
+%
+\citet{corels-website} have also created an interactive web interface at
+\textbf{\url{https://corels.eecs.harvard.edu}}, where a user can upload data and
+run CORELS from a browser.
 \end{arxiv}
-\textbf{\url{https://github.com/nlarusstone/corels}}.
