Cynthia edits: contributions and acknowledgements

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -27,25 +27,26 @@
 
 \title{Learning Certifiably Optimal Rule Lists for Categorical Data}
 
-\author{\name Elaine Angelino \email elaine@eecs.berkeley.edu \\
+\author{\name Elaine Angelino$\dag$ \email elaine@eecs.berkeley.edu \\
         \addr Department of Electrical Engineering and Computer Sciences\\
         University of California, Berkeley,
         Berkeley, CA 94720
         \AND
-        \name Nicholas Larus-Stone \email nlarusstone@alumni.harvard.edu \\
+        \name Nicholas Larus-Stone$\dag$ \email nlarusstone@alumni.harvard.edu \\
         \name Daniel Alabi \email alabid@g.harvard.edu \\
-        \name Margo Seltzer \email margo@eecs.harvard.edu \\
+        \name Margo Seltzer$\dag$ \email margo@eecs.harvard.edu \\
         \addr School of Engineering and Applied Sciences\\
         Harvard University,
         Cambridge, MA 02138
         \AND
-        \name Cynthia Rudin \email cynthia@cs.duke.edu \\
+        \name Cynthia Rudin$\dag$ \email cynthia@cs.duke.edu \\
         \addr Department of Computer Science and
         Department of Electrical and Computer Engineering\\
         Duke University,
         Durham, NC 27708}
 
-\editor{Maya Gupta}
+\editor{Maya Gupta\\ $\dag$ indicates equal contribution}
+%\footnote{}
 
 \maketitle
 
@@ -75,7 +76,7 @@
 \acks{E.A. conducted most of this work while supported by the Miller Institute for Basic Research
 in Science, University of California, Berkeley, and hosted by Prof. M.I. Jordan at RISELab.
 %
-C.D.R. is supported in part by MIT-Lincoln Labs.
+C.D.R. is supported in part by MIT-Lincoln Labs and the National Science Foundation under IIS-1053407.
 %
 E.A. would like to thank E.~Jonas, E.~Kohler, and S.~Tu for early implementation
 guidance, A.~D'Amour for pointing out the work by~\citet{Goel16}, V.~Kanade, S.~McCurdy,
@@ -85,7 +86,7 @@ SAIL, and the UC Berkeley Database Group for their support and feedback.
 We thank H.~Yang and B.~Letham for sharing advice and code for processing data
 and mining rules, B.~Coker for his critical advice on using the ProPublica COMPAS data set,
 as well as V.~Kaxiras and A.~Saligrama for their recent contributions to our implementation
-and for creating the CORELS website.
+and for creating the CORELS website. We are very grateful to our editor and anonymous reviewers.
 }
 
 \vskip 0.2in
