Cynthia's edits to refs

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -7,7 +7,7 @@ location = {Halifax, Nova Scotia, Canada},
 }
 
 @inproceedings{Larus-Stone18-sysml,
-author = {N. Larus-Stone and E. Angelino and D. Alabi and M. Seltzer and and V. Kaxiras and A. Saligrama and C. Rudin},
+author = {N. Larus-Stone and E. Angelino and D. Alabi and M. Seltzer and V. Kaxiras and A. Saligrama and C. Rudin},
 title = "Systems Optimizations for Learning Certifiably Optimal Rule Lists",
 booktitle = {{SysML} Conference},
 year = {2018},
@@ -38,15 +38,15 @@ year={2017},
 note={Unpublished}
 }
 
-@article{ChenRu17,
+@inproceedings{ChenRu18,
   __author  = {Chaofan Chen and Cynthia Rudin},
   author    = {C. Chen and C. Rudin},
   title     = {An optimization approach to learning falling rule lists},
-  journal   = {CoRR},
-  volume    = {abs/1710.02572},
-  year      = {2017}
+  booktitle   = {Artificial Intelligence and Statistics (AISTATS)},
+  year      = {2018}
 }
-
+  
+  
 @inproceedings{LakkarajuRu17,
 __author={Himabindu Lakkaraju and Cynthia Rudin},
 author={H. Lakkaraju and C. Rudin},
@@ -462,7 +462,7 @@ author    = {B. Letham and C. Rudin and T. H. McCormick and D. Madigan},
 	
 
 @inproceedings{WangRu15,
-__author={Fulton Wang and Cynthia Rudin},
+--author={Fulton Wang and Cynthia Rudin},
 author={F. Wang and C. Rudin},
 title={Falling Rule Lists},
 booktitle={International Conference on Artificial Intelligence and Statistics ({AISTATS})},
@@ -478,6 +478,21 @@ author={F. Wang and C. Rudin},
     month=oct
 }
 
+
+@article{GohRu18causal,
+__author={Siong Thye Goh and Cynthia Rudin},
+author={S. T. Goh and C. Rudin},
+title={A Minimax Surrogate Loss Approach to ConditionalDifference Estimation},
+  journal   = {CoRR},
+  volume    = {abs/1803.03769},
+  year      = {2018},
+  url       = {https://arxiv.org/abs/1803.03769},
+  archivePrefix = {arXiv},
+  eprint    = {1803.03769},
+year={2018}
+}
+
+
 @inproceedings{GohRu14,
 __author={Siong Thye Goh and Cynthia Rudin},
 author={S. T. Goh and C. Rudin},
@@ -486,13 +501,64 @@ booktitle={ACM SIGKDD Conference on Knowledge Discovery and Data Mining {(KDD)}}
 year={2014}
 } 
 
-@techreport{WangEtAl15,
-__author={Tong Wang and Cynthia Rudin and Finale Doshi and Yimin Liu and Erica Klampfl and Perry MacNeille}, 
-author={T. Wang and C. Rudin and F. Doshi and Y. Liu and E. Klampfl and P. MacNeille}, 
-title={Bayesian Or's of And's for Interpretable Classification with Application to Context Aware Recommender Systems},
-year={2015},
-institution={Massachusetts Institute of Technology}
+@article{WangEtAl2017,
+  __author  = {Tong Wang and Cynthia Rudin and Finale Doshi-Velez and Yimin Liu and Erica Klampfl and Perry MacNeille},
+  author={T. Wang and C. Rudin and F. Doshi and Y. Liu and E. Klampfl and P. MacNeille},
+  title   = {A Bayesian Framework for Learning Rule Sets for Interpretable Classification},
+  journal = {Journal of Machine Learning Research},
+  year    = {2017},
+  volume  = {18},
+  number  = {70},
+  pages   = {1-37}
 }
+
+@inproceedings{WangEtAl16,
+__author={Tong Wang and Cynthia Rudin and Finale Doshi and Yimin Liu and Erica Klampfl and Perry MacNeille},
+author={T. Wang and C. Rudin and F. Doshi and Y. Liu and E. Klampfl and P. MacNeille},
+title={Bayesian Or's of And's for Interpretable Classification with Application to Context Aware Recommender Systems},
+booktitle={International Conference on Data Mining {(ICDM)}},
+year={2016}
+}
+
+
+@article{Wang2018,
+  __author    = {Tong Wang},
+  author  = {Wang, T.},
+  title     = {Hybrid Decision Making: When Interpretable Models Collaborate With
+               Black-Box Models},
+  journal   = {CoRR},
+  volume    = {abs/1802.04346},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1802.04346},
+  archivePrefix = {arXiv},
+  eprint    = {1802.04346},
+}
+
+@inproceedings{LiEtAl18,
+title={Deep Learning for Case-based Reasoning through Prototypes: A Neural Network that Explains its Predictions},
+booktitle={Proceedings of {AAAI}}, 
+year={2018},
+__author={Oscar Li and Hao Liu and Chaofan Chen and Cynthia Rudin},
+author={Li, O. and Liu, H. and Chen, C. and Rudin, C.}
+}
+
+@inproceedings{UstunRu2017KDD,
+	__Author = {Ustun, Berk and Rudin, Cynthia},
+	author={Ustun, B. and Rudin, C.},
+	Booktitle = {Proceedings of the 23rd {ACM} {SIGKDD} International Conference on Knowledge Discovery and Data Mining},
+	Title = {Optimized Risk Scores},
+	Year = {2017}}
+	
+@article{UstunRu2016SLIM,
+	__Author = {Ustun, Berk and Rudin, Cynthia},
+	author={Ustun, B. and Rudin, C.},
+	Journal = {Machine Learning},
+	Number = {3},
+	Pages = {349--391},
+	Publisher = {Springer},
+	Title = {{Supersparse Linear Integer Models for Optimized Medical Scoring Systems}},
+	Volume = {102},
+	Year = {2016}}
 
 @article{muggleton1994inductive,
   title={Inductive logic programming: Theory and methods},
@@ -505,8 +571,19 @@ author={Muggleton, S. and De Raedt, L.},
   publisher={Elsevier}
 }
 
+@article{ZengUsRu2017,
+	__Author = {Zeng, Jiaming and Ustun, Berk and Rudin, Cynthia},
+	author={Zeng, J. and Ustun, B. and Rudin, C.},
+	Journal = {Journal of the Royal Statistical Society: Series {A} (Statistics in Society)},
+	Number = {3},
+	Pages = {689--722},
+	Title = {Interpretable classification models for recidivism prediction},
+	Volume = {180},
+	Year = {2017}}
+
 @techreport{RudinEr15-tr,
-author={Cynthia Rudin and {\c{S}}eyda Ertekin},
+__author={Cynthia Rudin and {\c{S}}eyda Ertekin},
+author={Ertekin, {\c{S}}. and Rudin, C.}
 year={2015},
 title={Learning Optimized Lists of Classification Rules},
 institution={Massachusetts Institute of Technology}
@@ -520,6 +597,31 @@ institution={Massachusetts Institute of Technology}
   volume={41},
   pages={2731--2738}
 }
+
+
+@article{tollenaar2013method,
+	__Author = {Tollenaar, Nikolaj and P.G.M. {van der Heijden}},
+	author={Tollenaar, N. and {van der Heijden}, P.},
+	Journal = {Journal of the Royal Statistical Society: Series A (Statistics in Society)},
+	Keywords = {recidivism},
+	Number = {2},
+	Pages = {565--584},
+	Publisher = {Wiley Online Library},
+	Title = {Which method predicts recidivism best?: a comparison of statistical, machine learning and data mining predictive models},
+	Volume = {176},
+	Year = {2013}}
+
+@article{bushway2013there,
+	__Author = {Bushway, Shawn D},
+	author={Bushway, S.},
+	Journal = {Criminology \& Public Policy},
+	Keywords = {recidivism},
+	Number = {3},
+	Pages = {563--567},
+	Publisher = {Wiley Online Library},
+	Title = {Is There Any Logic to Using Logit},
+	Volume = {12},
+	Year = {2013}}
 
 
 @article{levenshtein1966,
