Minor edits to refs: formatting, Doshi-Velez, missing comma

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -42,11 +42,10 @@ note={Unpublished}
   __author  = {Chaofan Chen and Cynthia Rudin},
   author    = {C. Chen and C. Rudin},
   title     = {An optimization approach to learning falling rule lists},
-  booktitle   = {Artificial Intelligence and Statistics (AISTATS)},
+  booktitle   = {International Conference on Artificial Intelligence and Statistics {(AISTATS)}},
   year      = {2018}
 }
-  
-  
+
 @inproceedings{LakkarajuRu17,
 __author={Himabindu Lakkaraju and Cynthia Rudin},
 author={H. Lakkaraju and C. Rudin},
@@ -465,7 +464,7 @@ author    = {B. Letham and C. Rudin and T. H. McCormick and D. Madigan},
 --author={Fulton Wang and Cynthia Rudin},
 author={F. Wang and C. Rudin},
 title={Falling Rule Lists},
-booktitle={International Conference on Artificial Intelligence and Statistics ({AISTATS})},
+booktitle={International Conference on Artificial Intelligence and Statistics {(AISTATS)}},
 year={2015}
 }
 
@@ -478,11 +477,10 @@ author={F. Wang and C. Rudin},
     month=oct
 }
 
-
 @article{GohRu18causal,
 __author={Siong Thye Goh and Cynthia Rudin},
 author={S. T. Goh and C. Rudin},
-title={A Minimax Surrogate Loss Approach to ConditionalDifference Estimation},
+title={A Minimax Surrogate Loss Approach to Conditional Difference Estimation},
   journal   = {CoRR},
   volume    = {abs/1803.03769},
   year      = {2018},
@@ -492,19 +490,18 @@ title={A Minimax Surrogate Loss Approach to ConditionalDifference Estimation},
 year={2018}
 }
 
-
 @inproceedings{GohRu14,
 __author={Siong Thye Goh and Cynthia Rudin},
 author={S. T. Goh and C. Rudin},
 title={Box Drawings for Learning with Imbalanced Data}, 
-booktitle={ACM SIGKDD Conference on Knowledge Discovery and Data Mining {(KDD)}},
+booktitle={ACM SIGKDD International Conference on Knowledge Discovery and Data Mining {(KDD)}},
 year={2014}
 } 
 
 @article{WangEtAl2017,
   __author  = {Tong Wang and Cynthia Rudin and Finale Doshi-Velez and Yimin Liu and Erica Klampfl and Perry MacNeille},
-  author={T. Wang and C. Rudin and F. Doshi and Y. Liu and E. Klampfl and P. MacNeille},
-  title   = {A Bayesian Framework for Learning Rule Sets for Interpretable Classification},
+  author={T. Wang and C. Rudin and F. Doshi-Velez and Y. Liu and E. Klampfl and P. MacNeille},
+  title   = {A {B}ayesian Framework for Learning Rule Sets for Interpretable Classification},
   journal = {Journal of Machine Learning Research},
   year    = {2017},
   volume  = {18},
@@ -513,8 +510,8 @@ year={2014}
 }
 
 @inproceedings{WangEtAl16,
-__author={Tong Wang and Cynthia Rudin and Finale Doshi and Yimin Liu and Erica Klampfl and Perry MacNeille},
-author={T. Wang and C. Rudin and F. Doshi and Y. Liu and E. Klampfl and P. MacNeille},
+__author={Tong Wang and Cynthia Rudin and Finale Doshi-Velez and Yimin Liu and Erica Klampfl and Perry MacNeille},
+author={T. Wang and C. Rudin and F. Doshi-Velez and Y. Liu and E. Klampfl and P. MacNeille},
 title={Bayesian Or's of And's for Interpretable Classification with Application to Context Aware Recommender Systems},
 booktitle={International Conference on Data Mining {(ICDM)}},
 year={2016}
@@ -524,7 +521,7 @@ year={2016}
 @article{Wang2018,
   __author    = {Tong Wang},
   author  = {Wang, T.},
-  title     = {Hybrid Decision Making: When Interpretable Models Collaborate With
+  title     = {Hybrid Decision Making: {W}hen Interpretable Models Collaborate With
                Black-Box Models},
   journal   = {CoRR},
   volume    = {abs/1802.04346},
@@ -535,8 +532,8 @@ year={2016}
 }
 
 @inproceedings{LiEtAl18,
-title={Deep Learning for Case-based Reasoning through Prototypes: A Neural Network that Explains its Predictions},
-booktitle={Proceedings of {AAAI}}, 
+title={Deep Learning for Case-based Reasoning through Prototypes: {A} Neural Network that Explains its Predictions},
+booktitle={Proceedings of the Association for the Advancement of Artificial Intelligence {(AAAI)}},
 year={2018},
 __author={Oscar Li and Hao Liu and Chaofan Chen and Cynthia Rudin},
 author={Li, O. and Liu, H. and Chen, C. and Rudin, C.}
@@ -545,10 +542,10 @@ author={Li, O. and Liu, H. and Chen, C. and Rudin, C.}
 @inproceedings{UstunRu2017KDD,
 	__Author = {Ustun, Berk and Rudin, Cynthia},
 	author={Ustun, B. and Rudin, C.},
-	Booktitle = {Proceedings of the 23rd {ACM} {SIGKDD} International Conference on Knowledge Discovery and Data Mining},
+	Booktitle = {{ACM} {SIGKDD} International Conference on Knowledge Discovery and Data Mining {(KDD)}},
 	Title = {Optimized Risk Scores},
 	Year = {2017}}
-	
+
 @article{UstunRu2016SLIM,
 	__Author = {Ustun, Berk and Rudin, Cynthia},
 	author={Ustun, B. and Rudin, C.},
@@ -556,7 +553,7 @@ author={Li, O. and Liu, H. and Chen, C. and Rudin, C.}
 	Number = {3},
 	Pages = {349--391},
 	Publisher = {Springer},
-	Title = {{Supersparse Linear Integer Models for Optimized Medical Scoring Systems}},
+	Title = {Supersparse Linear Integer Models for Optimized Medical Scoring Systems},
 	Volume = {102},
 	Year = {2016}}
 
@@ -583,7 +580,7 @@ author={Muggleton, S. and De Raedt, L.},
 
 @techreport{RudinEr15-tr,
 __author={Cynthia Rudin and {\c{S}}eyda Ertekin},
-author={Ertekin, {\c{S}}. and Rudin, C.}
+author={Ertekin, {\c{S}}. and Rudin, C.},
 year={2015},
 title={Learning Optimized Lists of Classification Rules},
 institution={Massachusetts Institute of Technology}
@@ -607,7 +604,7 @@ institution={Massachusetts Institute of Technology}
 	Number = {2},
 	Pages = {565--584},
 	Publisher = {Wiley Online Library},
-	Title = {Which method predicts recidivism best?: a comparison of statistical, machine learning and data mining predictive models},
+	Title = {Which method predicts recidivism best?: {A} comparison of statistical, machine learning and data mining predictive models},
 	Volume = {176},
 	Year = {2013}}
 
