Cynthia's edits to intro

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -205,7 +205,7 @@ the same accuracy as approaches such as random forests.
 This calls into question the need for use of a proprietary,
 black box algorithm for recidivism prediction.
 
-Our work overlaps with the thesis presented by~\citet{Larus-Stone17}.
+Our work overlaps with the thesis of~\citet{Larus-Stone17}.
 %
 We have also written a
 \begin{kdd}
@@ -216,7 +216,7 @@ and further implementation and data processing details~\citep{AngelinoLaAlSeRu17
 Our code is at \textbf{\url{https://github.com/nlarusstone/corels}}.
 \end{kdd}
 \begin{arxiv}
-preliminary version of this report~\citep{AngelinoLaAlSeRu17-kdd}, and a report
+preliminary conference version of this article~\citep{AngelinoLaAlSeRu17-kdd}, and a report
 highlighting systems optimizations of our implementation~\citep{Larus-Stone18-sysml}; the latter includes
 additional empirical measurements not presented here. \\
 
