Cynthia edit: missing period in equation

--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -670,7 +670,7 @@ Relating this bound to the objectives of~$\RL$ and~$\OptimalRL$ gives
 \Obj(\RL, \x, \y) = \Loss(\RL, \x, \y) + \Reg (K - 1)
 &\le \Loss(\OptimalRL, \x, \y) + a_i + \Reg(K - 1) \nn \\
 &= \Obj(\OptimalRL, \x, \y) + a_i - \Reg \nn \\
-&= \OptimalObj + a_i - \Reg
+&= \OptimalObj + a_i - \Reg.
 \label{eq:ub-ii}
 \end{align}
 Combining~\eqref{eq:ub-ii} with the requirement
