--- a/paper/sections/implementation-long.tex
+++ b/paper/sections/implementation-long.tex
@@ -33,7 +33,7 @@ custom scheduling policies designed to improve performance~(\S\ref{sec:schedulin
 
 Our incremental computations (\S\ref{sec:incremental}) require a
 cache to keep track of prefixes that we have already evaluated
-and are also still of interest.
+and that are also still under consideration by the algorithm.
 %
 We implement this cache as a prefix tree, a data structure also known as a trie,
 which allows us to efficiently represent structure shared between related prefixes.
